--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-androidExtensions{
+androidExtensions {
     experimental = true
 }
 
@@ -30,6 +30,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -48,6 +49,8 @@ dependencies {
     implementation 'com.xwray:groupie:2.1.0'
     //implementation 'com.xwray:groupie-kotlin-android-extensions:2.3.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
